# iit

./: .gitignore  eval_causality.py  eval_information.py  eval_ioi.py  mypy-3.10.ini  mypy-3.11.ini  mypy.ini  pyproject.toml  train.py  train_ioi.py
.github/workflows/: mypy.yml
iit/model_pairs/: __init__.py  base_model_pair.py  freeze_model_pair.py  iit_behavior_model_pair.py  iit_model_pair.py  ioi_model_pair.py  ll_model.py  probed_sequential_pair.py  stop_grad_pair.py  strict_iit_model_pair.py
iit/tasks/: hl_model.py  task_loader.py
iit/tasks/ioi/: __init__.py  ioi_config.py  ioi_dataset_tl.py  ioi_hl.py  test_ioi.py  utils.py
iit/tasks/mnist_pvr/: dataset.py  get_alignment.py  pvr_check_leaky_hl.py  pvr_hl.py  utils.py
iit/utils/: argparsing.py  config.py  correspondence.py  eval_ablations.py  eval_datasets.py  eval_metrics.py  eval_scripts.py  iit_dataset.py  index.py  io_scripts.py  logger.py  metric.py  mib_ioi_utils.py  node_picker.py  nodes.py  plotter.py  probes.py  tqdm.py  train_scripts.py  wrapper.py
ioi_data/names/: names.json  names_dev.json  names_test.json  names_train.json
ioi_data/objects/: objects.json  objects_dev.json  objects_test.json  objects_train.json
ioi_data/places/: places.json  places_dev.json  places_test.json  places_train.json
ioi_data/templates/: templates.json  templates_dev.json  templates_test.json  templates_train.json
tests/: test_datasets.py  test_ioi_dataset.py  test_ioi_hl.py  test_metric_logger.py  test_model_pairs.py  test_node_picker.py
tests/test_utils/: caching_model_pair.py  ioi_utils.py
